; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/cfi/extr_cfi.c_getfactorypr.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/cfi/extr_cfi.c_getfactorypr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_RDONLY = common dso_local global i32 0, align 4
@CFIOCGFACTORYPR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"ioctl(CFIOCGFACTORYPR)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @getfactorypr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getfactorypr() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @O_RDONLY, align 4
  %4 = call i32 @getfd(i32 %3)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @CFIOCGFACTORYPR, align 4
  %7 = call i64 @ioctl(i32 %5, i32 %6, i32* %1)
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %0
  %10 = call i32 @err(i32 -1, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %0
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @close(i32 %12)
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @getfd(i32) #1

declare dso_local i64 @ioctl(i32, i32, i32*) #1

declare dso_local i32 @err(i32, i8*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
